--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +11,11 @@
         body {
             font-family: 'Roboto', sans-serif;
         }
+
         .circle-progress {
             transition: stroke-dashoffset 0.5s ease;
         }
+
         .card {
             background: rgba(255, 255, 255, 0.1);
             box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -20,12 +23,14 @@
             border: 1px solid rgba(255, 255, 255, 0.2);
             transition: transform 0.3s, box-shadow 0.3s;
         }
+
         .card:hover {
             transform: scale(1.05);
             box-shadow: 0 0 20px rgba(0, 255, 255, 1);
         }
     </style>
 </head>
+
 <body class="bg-gray-900 text-white min-h-screen flex flex-col items-center p-6 relative">
     <header class="text-center mb-8">
         <h1 class="text-4xl font-bold text-cyan-400">Task Manager</h1>
@@ -34,8 +39,9 @@
 
     <div class="absolute top-4 right-4 text-white">
         <div class="text-center">
-            <h1 class="text-4xl font-bold mb-4">Clock</h1>
+            <h1 class="text-4xl font-bold mb-4"></h1>
             <div class="flex space-x-4">
+                <!-- Hours -->
                 <div class="flex flex-col items-center">
                     <div class="relative w-16 h-16">
                         <svg class="w-full h-full transform -rotate-90">
@@ -46,6 +52,7 @@
                     </div>
                     <p class="mt-2 text-sm">Hours</p>
                 </div>
+                <!-- Minutes -->
                 <div class="flex flex-col items-center">
                     <div class="relative w-16 h-16">
                         <svg class="w-full h-full transform -rotate-90">
@@ -56,6 +63,7 @@
                     </div>
                     <p class="mt-2 text-sm">Minutes</p>
                 </div>
+                <!-- Seconds -->
                 <div class="flex flex-col items-center">
                     <div class="relative w-16 h-16">
                         <svg class="w-full h-full transform -rotate-90">
@@ -78,7 +86,7 @@
                     <input type="text" id="taskName" class="w-full p-2 rounded-lg bg-gray-700 text-white" required>
                 </div>
                 <div>
-                    <label for="taskDescription" class="block text-sm font-medium">Description</label>
+                    <label for="taskDescription" class="block text-sm font-medium">Task Description</label>
                     <textarea id="taskDescription" class="w-full p-2 rounded-lg bg-gray-700 text-white" required></textarea>
                 </div>
                 <div>
@@ -101,68 +109,64 @@
             const minutes = now.getMinutes();
             const seconds = now.getSeconds();
 
+            // Update text values
             document.getElementById("hours").textContent = String(hours % 12 || 12).padStart(2, '0');
             document.getElementById("minutes").textContent = String(minutes).padStart(2, '0');
             document.getElementById("seconds").textContent = String(seconds).padStart(2, '0');
 
+            // Update circle progress
             const secondsCircle = document.getElementById("secondsCircle");
             const minutesCircle = document.getElementById("minutesCircle");
             const hoursCircle = document.getElementById("hoursCircle");
 
-            const secondsOffset = 188 - (188 * seconds) / 60;
-            const minutesOffset = 188 - (188 * minutes) / 60;
-            const hoursOffset = 188 - (188 * (hours % 12)) / 12;
+            const totalSeconds = 60;
+            const totalMinutes = 60;
+            const totalHours = 12;
+
+            const secondsOffset = 188 - (188 * seconds) / totalSeconds; // 188 is the circumference for smaller circles
+            const minutesOffset = 188 - (188 * minutes) / totalMinutes;
+            const hoursOffset = 188 - (188 * (hours % 12 || 12)) / totalHours;
 
             secondsCircle.style.strokeDashoffset = secondsOffset;
             minutesCircle.style.strokeDashoffset = minutesOffset;
             hoursCircle.style.strokeDashoffset = hoursOffset;
         }
 
-        setInterval(updateClock, 1000);
-        updateClock();
+        function loadTasks() {
+            const tasks = JSON.parse(localStorage.getItem('tasks')) || [];
+            tasks.forEach(task => addTaskToDOM(task));
+        }
 
-        const taskForm = document.getElementById('taskForm');
-        const taskList = document.getElementById('taskList');
+        function saveTask(task) {
+            const tasks = JSON.parse(localStorage.getItem('tasks')) || [];
+            tasks.push(task);
+            localStorage.setItem('tasks', JSON.stringify(tasks));
+        }
 
-        taskForm.addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const taskName = document.getElementById('taskName').value;
-            const taskDescription = document.getElementById('taskDescription').value;
-            const taskDeadline = document.getElementById('taskDeadline').value;
+        function deleteTaskFromStorage(taskName) {
+            const tasks = JSON.parse(localStorage.getItem('tasks')) || [];
+            const filteredTasks = tasks.filter(task => task.name !== taskName);
+            localStorage.setItem('tasks', JSON.stringify(filteredTasks));
+        }
 
-            try {
-                const response = await fetch('/tasks', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({
-                        title: taskName,
-                        description: taskDescription,
-                        deadline: taskDeadline
-                    })
-                });
+        function formatDate(dateStr) {
+            const date = new Date(dateStr);
+            const day = date.getDate().toString().padStart(2, '0');
+            const month = date.toLocaleString('default', { month: 'short' });
+            const year = date.getFullYear();
+            return `${day} ${month} ${year}`;
+        }
 
-                if (!response.ok) throw new Error('Failed to create task');
-
-                const task = await response.json();
-                const taskItem = createTaskElement(task);
-                taskList.appendChild(taskItem);
-                taskForm.reset();
-            } catch (error) {
-                console.error('Error:', error);
-                alert('Failed to create task');
-            }
-        });
-
-        function createTaskElement(task) {
+        function addTaskToDOM(task) {
+            const taskList = document.getElementById('taskList');
             const taskItem = document.createElement('li');
             taskItem.className = 'bg-gray-800 p-4 rounded-lg card flex justify-between items-center';
+
             taskItem.innerHTML = `
                 <div>
-                    <h3 class="text-lg font-medium">${task.title}</h3>
+                    <h3 class="text-lg font-medium">${task.name}</h3>
                     <p class="text-sm text-gray-400">Description: ${task.description}</p>
-                    <p class="text-sm text-gray-400">Deadline: ${task.deadline}</p>
+                    <p class="text-sm text-gray-400">Deadline: ${formatDate(task.deadline)}</p>
                 </div>
                 <div class="flex items-center gap-2">
                     <button class="mark-completed bg-green-500 text-white py-1 px-3 rounded-lg hover:bg-green-600 transition">Mark Completed</button>
@@ -177,11 +181,31 @@
             });
 
             taskItem.querySelector('.delete-task').addEventListener('click', () => {
+                deleteTaskFromStorage(task.name);
                 taskItem.remove();
             });
-
-            return taskItem;
         }
+
+        document.getElementById('taskForm').addEventListener('submit', (e) => {
+            e.preventDefault();
+            const taskName = document.getElementById('taskName').value;
+            const taskDescription = document.getElementById('taskDescription').value;
+            const taskDeadline = document.getElementById('taskDeadline').value;
+
+            const task = { name: taskName, description: taskDescription, deadline: taskDeadline };
+            addTaskToDOM(task);
+            saveTask(task);
+
+            document.getElementById('taskForm').reset();
+        });
+
+        // Update every second
+        setInterval(updateClock, 1000);
+
+        // Initialize clock and load tasks
+        updateClock();
+        loadTasks();
     </script>
 </body>
+
 </html>
